# MB2BL-JP

./: .gitignore  GEMINI.md  README.md  comparison.csv  names.csv  pip_requirements.txt  pyproject.toml  readXML.py
AI/: terminology.csv  translation-policy.md
Modules/: jp_functions.xml
Modules/CLJP-Common/: LICENSE  README.md  SubModule.xml
Modules/CLJP-Common/ModuleData/: module_strings.xml
Modules/CLJP-Font-GenShinGothic/: SubModule.xml
Modules/CLJP-Font-GenShinGothic/GUI/: CorrectLocalizationJPFont-GenshinSpriteData.xml  TitleSpriteData.xml
Modules/CLJP-Font-GenShinGothic/ModuleData/: spkingdoms.xslt
Modules/CLJP-Font-Latemin/: SubModule.xml
Modules/CLJP-Font-Latemin/GUI/: CorrectLocalizationJPFont-LateMinSpriteData.xml
Modules/CLJP-Font-Latemin/ModuleData/: spcultures.xslt
Modules/CLJP-Font-MgenPlus/: SubModule.xml
Modules/CLJP-Font-MgenPlus/GUI/: CorectLocalizationJPFont-MgenPlusSpriteData.xml  CorrectLocalizationJPFont-MgenPlusSpriteData.xml
Modules/CLJP-Font-MgenPlus2pp/: SubModule.xml
Modules/CLJP-Font-MgenPlus2pp/ModuleData/: spkingdoms.xslt
Modules/CorrectLocalizationJP-fool/: SubModule.xml
text/: MB2BL-Jp-pub.mo  Missings-JP.xml
tools/: SWCreate.py  SWUpdate.py  default.yml  duplications-suspects.csv  duplications.csv  exportXML.py  export_mod_languageXML.py  export_mod_language_XML.py  export_vanilla_XML.py  functions.py  generate_mod_languageXML.py  generate_mod_language_XML.py  get-vanilla-ids.py  import_mod_language_XML.py  makePackage.ps1  merge_po.py  readXML.py  read_vanilla_XML.py  shorten-native-po.py  xml-to-xslts.py
(+38 files in other folders)
