[project]
name = "localization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lxml>=6.0.0",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "polib>=1.2.0",
    "pywin32>=311",
    "pyyaml>=6.0.2",
    "regex>=2025.7.34",
    "winshell>=0.6",
]
